# nasdaq-matching-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run-demo.sh
.github/workflows/: ci.yml
docs/: demo.tape  design.md
scripts/: perf-engine.sh
src/apps/: bench.cpp  demo.cpp  exchanged.cpp  flowgen.cpp  itchfile.cpp  itchlisten.cpp  itchreplay.cpp  itchview.cpp  marketsim.cpp
src/book/: fast_book.cpp  fast_book.hpp  flat_map.hpp  order_book.cpp  order_book.hpp
src/client/: itch_book.cpp  itch_book.hpp  itch_file_processor.hpp  ouch_client.cpp  ouch_client.hpp
src/common/: clock.hpp  cpu.hpp  endian.hpp  histogram.hpp  queue.hpp  spsc_ring.hpp  types.hpp
src/engine/: engine.cpp  engine.hpp
src/feed/: capture.cpp  capture.hpp  feed.cpp  feed.hpp
src/gateway/: gateway.cpp  gateway.hpp  poller.cpp  poller.hpp
src/itch/: itch.hpp  raw_itch.hpp
src/mold/: mold.cpp  mold.hpp
src/ouch/: ouch.hpp
src/soup/: soup.cpp  soup.hpp
tests/: CMakeLists.txt  book_random_test.cpp  book_test.cpp  capture_test.cpp  common_test.cpp  engine_test.cpp  fastbook_alloc_test.cpp  fastbook_test.cpp  feed_test.cpp  gateway_test.cpp  itch_file_test.cpp  itch_test.cpp  latency_test.cpp  mold_test.cpp  ouch_client_test.cpp  ouch_test.cpp  raw_itch_test.cpp  soup_test.cpp
